<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginTop="42dp"
    android:layout_marginLeft="16dp"
    android:layout_marginRight="16dp"
    tools:context=".DetalleContacto">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:text="@string/labelConfirmar"
        android:layout_gravity="center"
        android:textSize="32sp" />

    <TextView
        android:id="@+id/viewNombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:textSize="24sp"

        android:text="@string/paramNombre"/>
    <TextView
        android:id="@+id/viewFecha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:text="@string/paramFecha"/>
    <TextView
        android:id="@+id/viewTelefono"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:text="@string/paramTelefono" />
    <TextView
        android:id="@+id/viewCorreo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:text="@string/paramCorreo"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="@string/caption_Direccion"/>
        <TextView
            android:id="@+id/viewDireccion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="@string/paramDireccion"
            />
    </LinearLayout>
    <Button
        android:id="@+id/EditButton"
        android:layout_marginTop="22dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/caption_ButtonEdit"
        android:textSize="20sp"
        style="@style/Widget.MaterialComponents.Button.TextButton.Dialog"/>




</LinearLayout>