<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_marginTop="16dp"
        android:layout_width="match_parent"
        android:layout_height="284dp"
        android:src="@drawable/contacto">
    </androidx.appcompat.widget.AppCompatImageView>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:startIconDrawable="@drawable/usuario"
        android:hint="@string/caption_Nombre">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textUsuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/caption_FechadeNacimiento"
        app:startIconDrawable="@drawable/calendario">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textFechaNac"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="false" />
    </com.google.android.material.textfield.TextInputLayout>



    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:startIconDrawable="@drawable/telefono"
        android:hint="@string/caption_telefono">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textTelefono"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true" />

    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:startIconDrawable="@drawable/correo"
        android:hint="@string/caption_correo">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:startIconDrawable="@drawable/internet"
        android:hint="@string/caption_Direccion">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textDireccion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"/>
    </com.google.android.material.textfield.TextInputLayout>
    <Button
        android:id="@+id/ButtonSend"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/caption_ButtonSig"
        android:textSize="20sp"
        style="@style/Widget.MaterialComponents.Button.TextButton"/>


</LinearLayout>
